paperless-ngx/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-redis
  namespace: paperless
spec:
  selector:
    app: paperless-redis
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
