paperless-ngx/virtualservice.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: paperless
  namespace: paperless
spec:
  hosts:
    - paperless.lag0.com.br
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: paperless
            port:
              number: 8000
